# generate_and_describe

./: Pipfile  db.sqlite3  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
images/: api.py  models.py  serializers.py
images/migrations/: 0001_initial.py
persona/: api.py  models.py  serializers.py
persona/migrations/: 0001_initial.py
storefront/: routers.py  settings.py  urls.py
